# StepperMotorServer

./: .jenkinsfile  CMakeLists.txt  Doxyfile
config/: CTK_StepperMotorConfig.xml  CTK_StepperMotorConfig_ckdev.xml  CTK_StepperMotorServer-DoocsVariableConfig.xml  CTK_StepperMotorServer.conf  DFMC_MD22_test.map  DFMC_MD22_test.mapp  RPC_LIBNO  ServerConfiguration.xml  bam_motor_CONF.TEMPLATE  devMapFile.dmap  dummies.dmap  initMotorDriverHW.py  motorConfig.xml  newer_firmware_mapfile.map  owisStage_400mA_200FS_200RPM_500ms_16uS_32MHz_endMode0.xml  steppermotorserver-config.xml  steppermotorserver.conf
config/epics/: dictionary.py  steppermotorserver-config.xml
include/: ControlInput.h  LinearStepperMotor.h  MotorControl.h  MotorDriver.h  MotorDriverParameters.h  MotorDriverReadback.h  MotorDummy.h  StepperMotorException.h  StepperMotorServer.h  Trigger.h  testModule.h  version.h.in
panels/: motorMain.xml  motor_dev.xml
panels/doocs/: motor_expert.xml  motor_main.xml
panels/doocs/include/: motor_dev.xml
panels/epics/: motor_ctrl.opi
src/: ApplicationInstance.cc  ControlInput.cc  LinearStepperMotor.cc  MotorControl.cc  MotorDriver.cc  MotorDriverReadback.cc  MotorDummy.cc  StepperMotorException.cc  StepperMotorServer.cc  applicationInstance.cc  dummy.cc
test/: testMotorDriver.cc
tests/: dummies.dmap  testMotorDriver.cc
tests/executables_src/: testMotorServer.cc
